--- a/hadoopops/pom.xml
+++ b/hadoopops/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>junit</artifactId>
             <version>4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.22</version>
+        </dependency>
     </dependencies>
 
 </project>
