--- a/hadoopops/pom.xml
+++ b/hadoopops/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lcy</groupId>
-    <artifactId>hdfsops</artifactId>
+    <artifactId>hadoopops</artifactId>
 
     <dependencies>
         <dependency>
